tests/suite/fail/regression/reg_use_after_move.ny
fn main() {
    let a = "moved"
    let b = a
    print(a) //~ ERROR was moved
}
